<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ju3-d8-OYE">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Авторизация-->
        <scene sceneID="794-cm-jSb">
            <objects>
                <viewController id="Mne-qW-Mi2" customClass="LoginViewController" customModule="GBShop" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="wRL-ie-4RL">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="YT5-jr-fP0">
                                <rect key="frame" x="32" y="300.5" width="311" height="130"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Логин" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BMI-Rg-epk">
                                        <rect key="frame" x="0.0" y="0.0" width="311" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="textFieldLogin"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Пароль" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sat-in-WNB">
                                        <rect key="frame" x="0.0" y="50" width="311" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="textFieldPassword"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="FPd-PA-SoY">
                                        <rect key="frame" x="0.0" y="100" width="311" height="30"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5zx-5q-9eD">
                                                <rect key="frame" x="0.0" y="0.0" width="150.5" height="30"/>
                                                <color key="backgroundColor" name="colorButton"/>
                                                <accessibility key="accessibilityConfiguration" identifier="buttonLogin"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="Войти"/>
                                                <connections>
                                                    <action selector="buttonLoginTapped:" destination="Mne-qW-Mi2" eventType="touchUpInside" id="7QP-aS-vwv"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xql-Hb-bGt">
                                                <rect key="frame" x="160.5" y="0.0" width="150.5" height="30"/>
                                                <color key="backgroundColor" name="colorButton"/>
                                                <accessibility key="accessibilityConfiguration" identifier="buttonRegistrate"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="Регистрация"/>
                                                <connections>
                                                    <action selector="buttonRegistrationTapped:" destination="Mne-qW-Mi2" eventType="touchUpInside" id="5GP-Me-Jk4"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="tXe-ZZ-02i">
                                <rect key="frame" x="177.5" y="355.5" width="20" height="20"/>
                                <color key="color" name="colorButton"/>
                            </activityIndicatorView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" label="mainView"/>
                        <constraints>
                            <constraint firstItem="YT5-jr-fP0" firstAttribute="centerY" secondItem="X12-zp-IZU" secondAttribute="centerY" id="JUA-wT-DOt"/>
                            <constraint firstItem="X12-zp-IZU" firstAttribute="trailing" secondItem="YT5-jr-fP0" secondAttribute="trailing" constant="32" id="Sfy-7p-0Ch"/>
                            <constraint firstItem="tXe-ZZ-02i" firstAttribute="centerY" secondItem="X12-zp-IZU" secondAttribute="centerY" id="h5y-Tj-e58"/>
                            <constraint firstItem="tXe-ZZ-02i" firstAttribute="centerX" secondItem="X12-zp-IZU" secondAttribute="centerX" id="sGS-iP-2Ft"/>
                            <constraint firstItem="YT5-jr-fP0" firstAttribute="leading" secondItem="X12-zp-IZU" secondAttribute="leading" constant="32" id="uxw-Fd-fKv"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="X12-zp-IZU"/>
                    </view>
                    <navigationItem key="navigationItem" title="Авторизация" id="21G-2e-tda"/>
                    <connections>
                        <outlet property="activityIndicator" destination="tXe-ZZ-02i" id="0c9-D4-s9x"/>
                        <outlet property="buttonLogin" destination="5zx-5q-9eD" id="xIs-CJ-GB5"/>
                        <outlet property="buttonRegistration" destination="Xql-Hb-bGt" id="AKS-oW-tMA"/>
                        <outlet property="textFieldLogin" destination="BMI-Rg-epk" id="4wR-go-ofJ"/>
                        <outlet property="textFieldPassword" destination="sat-in-WNB" id="fLp-zy-rAN"/>
                        <segue destination="9sx-PB-6Ik" kind="show" identifier="showRegistrateScene" id="oFa-Q3-g9j"/>
                        <segue destination="cs3-Nq-vBV" kind="show" identifier="showCatalogScene" id="Ztd-eD-v4f"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="10K-F3-TW6" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1092" y="121.88905547226388"/>
        </scene>
        <!--Registration-->
        <scene sceneID="Thu-md-a3o">
            <objects>
                <viewControllerPlaceholder storyboardName="Registration" referencedIdentifier="Registration" id="9sx-PB-6Ik" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="eNj-LD-BWA" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1804" y="121"/>
        </scene>
        <!--Catalog-->
        <scene sceneID="yHT-6g-gBI">
            <objects>
                <viewControllerPlaceholder storyboardName="Catalog" referencedIdentifier="Catalog" id="cs3-Nq-vBV" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="3bY-5J-ac3" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1782" y="187"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="FgY-AY-rJx">
            <objects>
                <navigationController storyboardIdentifier="LoginStart" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Ju3-d8-OYE" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="akw-kD-8YE">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="Mne-qW-Mi2" kind="relationship" relationship="rootViewController" id="i6L-0h-avg"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Z8Q-c7-1ms" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="152.80000000000001" y="121.88905547226388"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="colorButton">
            <color red="0.29803921568627451" green="0.85098039215686272" blue="0.39215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
